--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306?useUnicode=true&characterEncoding=utf-8
-username=root
+url=jdbc:mysql://127.0.0.1:3306/smbms?useUnicode=true&characterEncoding=utf8
+user=root
 password=root
 
